# stratosearch

./: .gitattributes  .gitignore  README.md  build.py  pyproject.toml
calculate/: convert_to_yolo.py  data_preprocess.py  loops.py  segmentation.py  useful_funcs.py
stratosearch/calculate/calculate/: __init__.py  postprocessing.py  preprocessing.py  splines.py
stratosearch/calculate/models/: __init__.py  unet.py
stratosearch/gui/: main.py
stratosearch/gui/Controller/: DataLoadWorker.py  ExportWorker.py  InferenceWorker.py  SplineWorker.py  __init__.py
stratosearch/gui/UI/: __init__.py
stratosearch/gui/UI/Settings/: EditableSpline.py  SettingWidget.py  SettingWidget.ui  SettingWidget_ui.py  __init__.py
stratosearch/gui/UI/View/: style.qss
weights/: DPT_bad.pth  UNet.pth
